# mcpHomeManager

./: .dockerignore  .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUTURE_IDEAS.md  LICENSE  README.md  SECURITY.md  TESTING.md  docker-compose.dev.yml  docker-compose.postgres.yml  docker-compose.yml  entrypoint.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
backend/: README.md  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_setup_wizard.py  003_endpoint_overrides.py
backend/src/: app.py  cli.py  config.py  database.py  serve.py
backend/src/domain/: exceptions.py  validation.py
backend/src/domain/constants/: __init__.py  http_methods.py
backend/src/domain/entities/: app_definition.py  audit_entry.py  generic_tool_spec.py  service_connection.py  smtp_config.py  tool_definition.py  user.py
backend/src/domain/ports/: app_provider.py  audit_repository.py  encryption.py  generic_tool_repository.py  reset_token_repository.py  service_client.py  service_repository.py  smtp_repository.py  tool_repository.py  user_repository.py
backend/src/entrypoints/api/: admin.py  audit.py  auth.py  discovery.py  guards.py  health.py  message_codes.py  schemas.py  services.py  setup.py  tools.py  users.py
backend/src/entrypoints/mcp/: audit_util.py  meta_tools.py  server.py  template_engine.py  user_context.py
backend/src/entrypoints/mcp/templates/: base.html  config.html  control.html  dashboard.html
backend/src/entrypoints/mcp/templates/apps/: forgejo_repos.html  ha_entities.html  paperless_documents.html
backend/src/infrastructure/: discovery.py  metrics.py
backend/src/infrastructure/clients/: adguard_client.py  base_client.py  calibreweb_client.py  cloudflare_client.py  forgejo_client.py  freshrss_client.py  generic_rest_client.py  homeassistant_client.py  immich_client.py  nextcloud_client.py  npm_client.py  paperless_client.py  portainer_client.py  stirlingpdf_client.py  tailscale_client.py  uptimekuma_client.py  wallabag_client.py  wikijs_client.py
backend/src/infrastructure/encryption/: fernet_encryption.py
backend/src/infrastructure/persistence/: audit_repository.py  generic_tool_repository.py  orm_models.py  reset_token_repository.py  service_repository.py  smtp_repository.py  tool_repository.py  user_repository.py
backend/src/security/: api_auth_middleware.py  auth_context.py  auth_helpers.py  mcp_auth.py
backend/src/services/: audit_service.py  client_factory.py  config_export.py  email_service.py  generic_tool_service.py  health_service.py  key_rotation.py  openapi_parser.py  permission_profiles.py  service_manager.py  tool_permission_service.py  tool_registry.py  user_service.py
backend/tests/: conftest.py  test_adguard_client.py  test_admin_self_mcp.py  test_api_endpoints.py  test_api_message_codes.py  test_app_definitions.py  test_audit_client_tracking.py  test_calibreweb_client.py  test_client_factory.py  test_cloudflare_client.py  test_config.py  test_config_export.py  test_domain_entities.py  test_encryption.py  test_exceptions.py  test_forgejo_client.py  test_freshrss_client.py  test_generic_rest_client.py  test_generic_tool_crud.py  test_generic_tool_repository.py  test_homeassistant_client.py  test_immich_client.py  test_key_rotation.py  test_mcp_apps.py  test_mcp_apps_phase2.py  test_mcp_auth_modes.py  test_mcp_sync.py  test_meta_tools.py  test_metrics.py  test_new_service_clients.py  test_nextcloud_client.py  test_npm_client.py  test_openapi_parser.py  test_paperless_client.py  test_password_reset.py  test_permission_profiles.py  test_portainer_client.py  test_security_guards.py  test_service_manager.py  test_setup.py  (+7 more)
documentation/: adguard.md  audit-logs.md  calibre-web.md  chatgpt.md  claude-code.md  claude-desktop.md  cloudflare.md  codex.md  connecting-services.md  copilot-cli.md  cursor.md  custom-tools.md  dashboard.md  developer.md  docker-compose.md  environment-variables.md  first-setup.md  forgejo.md  freshrss.md  generic-rest.md  home-assistant.md  immich.md  installation.md  mcp-apps.md  multi-user.md  nextcloud.md  nginx-proxy-manager.md  openapi-import.md  opencode.md  overview.md  paperless-ngx.md  portainer.md  reverse-proxy.md  security.md  self-mcp.md  stirling-pdf.md  tailscale.md  uptime-kuma.md  wallabag.md  (+2 more)
(+307 files in other folders)
