[project]
name = "mcp-home"
version = "0.1.0"
description = "MCP server and management dashboard for homelab services"
requires-python = ">=3.14"
dependencies = [
    "litestar[standard]>=2.21.0",
    "advanced-alchemy>=1.8.2",
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "cryptography>=46.0.5",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.13.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "aiodocker>=0.26.0",
    "structlog>=25.5.0",
    "prometheus-client>=0.24.1",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "aiosmtplib>=3.0.2",
]

[project.scripts]
mcp-home = "serve:main"
mcp-home-reset-password = "cli:reset_admin_password"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "mypy>=1.15.0",
    "types-pyyaml>=6.0.12.20250915",
    "aiosqlite>=0.22.1",
]

# ── Ruff ────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade — modern Python idioms
    "B",      # flake8-bugbear — common bugs
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit — security
    "ASYNC",  # flake8-async — async pitfalls
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez — naive datetime bugs
    "T20",    # flake8-print — leftover prints
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
    "PIE",    # flake8-pie — misc lint
    "RET",    # flake8-return — return statement issues
    "PERF",   # perflint — performance anti-patterns
    "FURB",   # refurb — modern Python patterns
    "LOG",    # flake8-logging — logging best practices
    "FLY",    # flynt — f-string conversion
    "N",      # pep8-naming
]
ignore = [
    "S104",   # bind-to-all-interfaces — intentional in a Docker container
    "S603",   # subprocess-without-shell-equals-true — not relevant
    "S607",   # start-process-with-partial-path — not relevant
    "RET504", # unnecessary-assign-before-return — sometimes aids readability
    "N818",   # exception-name-with-error-suffix — not our convention
    "UP046",  # non-pep695-generic-class — not ready for 3.14 yet
    "UP047",  # non-pep695-generic-function — not ready for 3.14 yet
    "RUF012", # mutable-class-default — Litestar controllers use guards=[] by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert — required in tests
    "S105",   # hardcoded-password-string — expected in fixture/test token literals
    "S106",   # hardcoded-password — test fixtures
    "S107",   # hardcoded-password-default — test helper defaults
    "S311",   # suspicious-non-cryptographic-random — fine in tests
]
"src/serve.py" = ["T20"]          # print() ok in entrypoint
"src/cli.py" = ["T20", "S101"]    # print() and assert ok in CLI

[tool.ruff.lint.isort]
known-first-party = ["app", "config", "domain", "entrypoints", "infrastructure", "security", "services"]

# ── Mypy ────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.14"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"
packages = ["app", "config", "domain", "entrypoints", "infrastructure", "security", "services", "serve", "cli"]

[[tool.mypy.overrides]]
module = [
    "aiodocker.*",
    "mcp.*",
    "advanced_alchemy.*",
    "prometheus_client.*",
    "litestar.*",
]
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
